[gd_scene load_steps=2 format=3 uid="uid://bxkfqb27jtqad"]

[ext_resource type="Script" uid="uid://jlaa8nn1fky8" path="res://scripts/ui/CardShowcase.gd" id="1_v3n4q"]

[node name="CardShowcase" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v3n4q")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="CardContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="Controls" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -120.0
offset_right = 150.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0

[node name="ButtonContainer" type="HBoxContainer" parent="Controls"]
layout_mode = 2
size_flags_vertical = 0

[node name="PrevButton" type="Button" parent="Controls/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "← 上一张"

[node name="NextButton" type="Button" parent="Controls/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = "下一张 →"

[node name="BackToMenuButton" type="Button" parent="Controls"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.8, 0.9, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.6, 0.8, 1, 1)
theme_override_font_sizes/font_size = 16
text = "返回主菜单"

[node name="CardInfoLabel" type="Label" parent="Controls"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 14
text = "卡牌信息"
horizontal_alignment = 1
autowrap_mode = 2

[connection signal="resized" from="." to="." method="_on_resized"]
